Fixed whitespace at top of page

--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -122,6 +122,7 @@ header.template_header h1 span {
 }
 /***** Home *****/
 #templatemo_home {
+    display: flex;
     background: #154558 url(../images/Group_1_34.png) fixed;
     background-size: contain;
     background-repeat: no-repeat;
